# My_wrkspc

./: README.md  custom_world
Ionic World/: maze.world
Ionic World/launch/: maze.launch
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
my_robot_controller_pkg/: package.xml  setup.cfg  setup.py
my_robot_controller_pkg/launch/: auto_mover.launch.py  controller_estimator.launch.py
my_robot_controller_pkg/my_robot_controller_pkg/: auto_mover.py  robot_controller.py
my_robot_spawner_pkg/: package.xml  setup.cfg  setup.py
my_robot_spawner_pkg/launch/: cartographer_ros.launch.py  full_simulation.launch.py  gazebo_world.launch.py
my_robot_spawner_pkg/my_robot_spawner_pkg/: spawn_demo.py
my_robot_spawner_pkg/worlds/: indroom.world
my_wall_following_pkg/: package.xml  setup.cfg  setup.py
my_wall_following_pkg/launch/: wall_following.launch.py
my_wall_following_pkg/my_wall_following_pkg/: controller.py
obstacle_av_custom/: package.xml  setup.cfg  setup.py
obstacle_av_custom/launch/: spawn_husky.launch.py  spawn_world.launch.py  turtlebot3_world_navigation.launch.py  visualize_world.launch.py
obstacle_av_custom/world/: mera_ghar.world  model.config  model.sdf
obstacle_avoidance/: package.xml  setup.py
obstacle_avoidance/launch/: obstacle_avoider.launch.py  turtlebot3_world_navigation.launch.py
warehouse_robot_controller_pkg/: package.xml
warehouse_robot_spawner_pkg/: package.xml  setup.py
warehouse_robot_spawner_pkg/launch/: gazebo_world.launch.py
(+12 files in other folders)
