<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>obstacle_av_custom</name>
  <version>0.0.1</version>
  <description>Simple obstacle avoider for Husky</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build and Execution Dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ament_lint_common</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <!-- Test Dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <!-- Export the build type -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

